# qsp-agent

./: .aiignore  .gitignore  AGENTS.md  Cargo.toml  Readme.md
.github/workflows/: rust.yml
lib-hamlib/: Cargo.toml  build.rs  wrapper.h
lib-hamlib/src/: errors.rs  hamlib.rs  hamlib_raw.rs  lib.rs  rig.rs
package/: Dockerfile.deb  README.Debian  build-deb.sh  config.toml
package/debian/: control.in  postinst  postrm  prerm
package/man/: qsp-agent.1
package/systemd/: qsp-agent.service
qsp-agent/: Cargo.toml
qsp-agent/src/: command_line.rs  configuration.rs  main.rs
qsp-agent/src/hardware/: audio_io.rs  error.rs  hamlib.rs  mod.rs
qsp-agent/src/hardware/transceiver/: mod.rs  transceiver_manager.rs  transceiver_state.rs
qsp-agent/src/signaling/: message_decoder.rs  mod.rs  signaling_server_manager.rs
qsp-agent/src/webrtc/: command_interpreter.rs  command_session.rs  mod.rs  transceiver_mapping.rs  webrtc_session.rs  webrtc_session_manager.rs  webrtc_util.rs
src/: command_line.rs  configuration.rs  main.rs
src/audio/: mod.rs
src/hardware/: audio.rs  audio_io.rs  mod.rs
src/signaling/: message_decoder.rs  mod.rs  signaling_server_connection.rs  signaling_server_manager.rs
src/webrtc/: mod.rs  webrtc_session.rs  webrtc_util.rs
