[package]
name = "qsp-remote-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version= "1.23.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
futures = "0.3.25"
futures-channel = "0.3.25"
futures-util = "0.3.25"
url = "2.3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
webrtc = "0.6.0"
anyhow = "1.0"
bytes = "1.1"
chrono = "0.4"
clap = "4.3.0"
flume = "0.10.14"
base64 = "0.21"
uuid = { version = "1.2", features = ["v4" ]}
cpal = "0.15.0"
opus = "0.3.0"
ogg = "0.9.0"

hound = "3.5"