[package]
name = "qsp-remote-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version= "1.38", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
webrtc = "0.11"
anyhow = "1.0"
bytes = "1.9"
chrono = "0.4"
clap = "4.3.0"
flume = "0.11"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4" ]}
cpal = "0.15"
opus = "0.3"
ogg = "0.9.0"

hound = "3.5"