[package]
name = "qsp-remote-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version= "1.43", features = ["full", "tracing"] }
tokio-tungstenite = "0.29"
console-subscriber = "0.5"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
webrtc = "0.12"
anyhow = "1.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flume = "0.12"
cpal = "0.15"
opus = "0.3"
uuid = { version = "1.23", features = ["v4"] }
prost = "0.14"

qsp-proto-files = { git = "https://github.com/ham-qsp/qsp-proto-files.git", tag = "v0.1.3" }

hamlib = { path = "../lib-hamlib" }
