[package]
name = "qsp-remote-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1.52", features = [ "tracing"] }
tokio-tungstenite = "0.29"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "1.1"
thiserror = "2.0"
webrtc = "0.17"
anyhow = "1.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flume = "0.12"
cpal = "0.18"
opus = "0.3"
uuid = { version = "1.23", features = ["v4"] }
prost = "0.14"
nix = "0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

qsp-proto-files = { git = "https://github.com/ham-qsp/qsp-proto-files.git", tag = "v0.1.7" }

hamlib = { path = "../lib-hamlib" }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
tracing-etw = "0.2"
